--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
    crossorigin=""></script>
 <style>
-#mapid { height: 600px; }
+#mapid { height: 400px;
+         width: 75%;}
 </style>
 </head>
 
