--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
     accessToken: 'pk.eyJ1Ijoid3lsaWVhIiwiYSI6ImNqeWdidG95ZjAxa28zbW1zdW41Yjd0azIifQ.olNh_SrC3AwNNxPu4yDiFw'
 }).addTo(mymap);
    
-var usLayer = omnivore.topojson('/mapbox.js/assets/data/world-110m.json')
+var ontarioLayer = omnivore.topojson('https://raw.githubusercontent.com/a-wylie/mapping/master/topojson_test2.json')
     .addTo(mymap);   
    
 </script>
