--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
     accessToken: 'pk.eyJ1Ijoid3lsaWVhIiwiYSI6ImNqeWdidG95ZjAxa28zbW1zdW41Yjd0azIifQ.olNh_SrC3AwNNxPu4yDiFw'
 }).addTo(mymap);
    
-var ontarioLayer = omnivore.topojson('https://raw.githubusercontent.com/a-wylie/mapping/master/topojson_test2.json')
-    .addTo(mymap);   
+var usLayer = omnivore.topojson('https://raw.githubusercontent.com/a-wylie/mapping/master/gjwgs84less2.json')
+    .addTo(map);
    
 </script>
 </body>
