--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
 }).addTo(mymap);
    
 var usLayer = omnivore.topojson('https://raw.githubusercontent.com/a-wylie/mapping/master/gjwgs84less2.json')
-    .addTo(map);
+    .addTo(mymap);
    
 </script>
 </body>
