--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@ function getColor(distance10) {
     return distance10 > 20 ? '#800026' :
            distance10 > 40  ? '#BD0026';
             }
+    
+function style(feature) {
+    return {
+        fillColor: getColor(feature.properties.density),
+        weight: 2,
+        opacity: 1,
+        color: 'white',
+        dashArray: '3',
+        fillOpacity: 0.7
+    };
+}
+
+L.geoJson(statesData, {style: style}).addTo(map);    
 </script>
 </body>
 
