--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ function style(feature) {
     };
 }
 
-L.geoJson(statesData, {style: style}).addTo(map);    
+L.geoJson(usLayer, {style: style}).addTo(map);    
 </script>
 </body>
 
