--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var customLayer = L.geoJson(null, {
     style: function(feature) {
         return {
             color: '#a1dab4',
-            dashArray: '3',
+            fillOpacity: '1',
         };
     }
 });
