--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ var customLayer = L.geoJson(null, {
     style: function(feature) {
         return {
             color: '#a1dab4',
+            weight: '2',
             fillOpacity: '0.7',
         };
     }
