--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
    
 //Styling TopoJSON
 
-ffunction getColor(d) {
+function getColor(d) {
     return d > 1000 ? '#800026' :
            d > 500  ? '#BD0026' :
            d > 200  ? '#E31A1C' :
