--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function style(feature) {
 }
 
 var customLayer = L.geoJson(null, {style: style});
-omnivore.topojson('https://raw.githubusercontent.com/a-wylie/mapping/master/gjwgs84less2.json', null, customLayer).addTo(map);   
+omnivore.topojson('https://raw.githubusercontent.com/a-wylie/mapping/master/gjwgs84less2.json', null, customLayer).addTo(mymap);   
       
 </script>
 </body>
