--- a/index.html
+++ b/index.html
@@ -36,23 +36,19 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
 //Styling TopoJSON
 
 function getColor(d) {
-    return d > 1000 ? '#800026' :
-           d > 500  ? '#BD0026' :
-           d > 200  ? '#E31A1C' :
-           d > 100  ? '#FC4E2A' :
-           d > 50   ? '#FD8D3C' :
-           d > 20   ? '#FEB24C' :
-           d > 10   ? '#FED976' :
-                      '#FFEDA0';
+    return d > 1000 ? '#ffffcc' :
+           d > 500  ? '#a1dab4' :
+           d > 200  ? '#41b6c4' :
+           d > 100  ? '#2c7fb8' :
+           d > 50   ? '#253494';
 }
    
 function style(feature) {
     return {
         fillColor: getColor(feature.properties.distance12),
-        weight: 2,
-        opacity: 1,
+        weight: 1,
+        opacity: 0.7,
         color: 'white',
-        dashArray: '3',
         fillOpacity: 0.5
     };
 }
