--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
 //Styling TopoJSON
 
 function getColor(d) {
-    return d > 1000 ? '#800026' :
-           d > 500  ? '#BD0026' :
-           d > 200  ? '#E31A1C' :
-           d > 100  ? '#FC4E2A' :
-           d > 50   ? '#FD8D3C' :
-           d > 20   ? '#FEB24C' :
-           d > 10   ? '#FED976' :
+    return d > 1000 ? '#ffffcc' :
+           d > 500  ? '#a1dab4' :
+           d > 200  ? '#41b6c4' :
+           d > 100  ? '#2c7fb8' :
+           d > 50   ? '#253494' :
                       '#FFEDA0';
 }
    
